[package]
name = "solana-raydium-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-clmm", features = [
    "no-entrypoint",
    "client",
] }
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
solana-sdk = ">=1.14, <1.17"
solana-client = ">=1.14, <1.17"
solana-account-decoder = ">=1.14, <1.17"
solana-transaction-status = ">=1.14, <1.17"
spl-token = { version = "4.0.0", features=["no-entrypoint"] }
spl-token-client = "0.7.0"
spl-memo = "4.0.0"
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"]}
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"]}
mpl-token-metadata = { version = "^1.11.0", features = ["no-entrypoint"] }
clap = { version = "4.1.8", features = ["derive"] }
anyhow = "1.0.32"
rand = "0.7.3"
hex = "0.4.3"
configparser = "3.0.0"
serde_json = { version = "1.0.78" }
serde = { version = "1.0", features = ["derive"] }
arrayref = "0.3.7"
bs58 = { version = "0.5.0"}
bincode = { version = "1.3.3" }
regex = "1"
colorful = "0.2.2"